Add proper warning dialog.  Use jquery.  Treat extensionless files as rosz.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "dist/app.js",
   "dependencies": {
+    "@types/jquery": "^3.3.33",
     "jszip": "^3.2.2"
   },
   "devDependencies": {
+    "@types/bootstrap": "^4.3.1",
     "@types/jszip": "^3.1.7",
     "clean-webpack-plugin": "^3.0.0",
     "lite-server": "^2.5.4",
