--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "devDependencies": {
     "@types/bootstrap": "^4.6.0",
     "@types/jszip": "^3.4.1",
+    "@webpack-cli/serve": "^1.5.0",
     "clean-webpack-plugin": "^3.0.0",
     "lite-server": "^2.6.1",
     "ts-loader": "^6.2.2",
     "typescript": "^3.9.6",
     "webpack": "^5.19.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
   },
   "scripts": {
