--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "@types/jquery": "^3.5.5",
     "@types/lodash": "^4.14.168",
     "bootswatch": "^5.1.0",
-    "jszip": "^3.5.0"
+    "jszip": "^3.5.0",
+    "xpath-ts": "^1.3.13"
   },
   "devDependencies": {
-    "@types/bootstrap": "^4.6.0",
+    "@types/bootstrap": "^5.1.0",
     "@types/jszip": "^3.4.1",
     "@webpack-cli/serve": "^1.5.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^4.0.0",
     "lite-server": "^2.6.1",
-    "ts-loader": "^6.2.2",
-    "typescript": "^3.9.6",
+    "ts-loader": "^9.2.0",
+    "typescript": "^4.4.0",
     "webpack": "^5.19.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
