--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.1.0",
+    "@types/jasmine": "^3.10.2",
+    "@types/jsdom": "^16.2.13",
     "@types/jszip": "^3.4.1",
     "clean-webpack-plugin": "^3.0.0",
+    "jasmine": "^3.10.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.4.0",
+    "jsdom": "^18.0.1",
     "lite-server": "^2.6.1",
     "ts-loader": "^7.0.5",
+    "ts-node": "^10.4.0",
     "typescript": "^3.9.7",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jasmine-ts --config jasmine.json",
     "start": "webpack-dev-server",
     "buildprod": "webpack --config webpack.config.prod.js",
     "build": "webpack"
