--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -38,5 +38,7 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
         enable_jekyll: false
+        source_dir: dist
+        publish_dir: .
 
 
