--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -38,7 +38,7 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
         enable_jekyll: false
-        publish_dir: dist
+        publish_dir: .
         destination_dir: .
 
 
