--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14 16]
+        node-version: 14
     
     steps:
     - uses: actions/checkout@v2
