--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -13,13 +13,13 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14, 16]
+        node-version: [14.x, 16.x, 18.x]
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
 
