--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x]
     
     steps:
     - uses: actions/checkout@v3
@@ -26,7 +26,8 @@ jobs:
     - name: Build
       run: |
         npm install
-        npx webpack
+        npm test
+        npm run buildprod
       env:
         CI: true
         
@@ -34,6 +35,7 @@ jobs:
       # You may pin to the exact commit or the version.
       # uses: peaceiris/actions-gh-pages@bbdfb200618d235585ad98e965f4aafc39b4c501
       uses: peaceiris/actions-gh-pages@v3.7.3
+      if: ${{ github.event_name == 'push' }}
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
