--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 node_modules
 #dist
 .idea
+.vscode/settings.json
+/dist/app*
+/dist/main*
 /dist/renderer*
 /dist/roster*
-/dist/app*
-
-.vscode/settings.json
