--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/lodash": "^4.14.178",
     "bootswatch": "^5.1.3",
     "jszip": "^3.7.1",
+    "lodash": "^4.17.21",
     "xpath-ts": "^1.3.13"
   },
   "devDependencies": {
@@ -19,12 +20,11 @@
     "jasmine": "^4.0.2",
     "jasmine-spec-reporter": "^7.0.0",
     "jsdom": "^19.0.0",
-    "lite-server": "^2.6.1",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5",
     "webpack": "^5.94.0",
-    "webpack-cli": "^4.9.2",
+    "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
   },
   "scripts": {
